--- a/app/index.html
+++ b/app/index.html
@@ -40,12 +40,12 @@
               </li>
             </ul>
           </nav>
-          <div class="phone__box">
+          <div class="phone__box phone__box-header">
             <a class="phone" href="tel:0988904494">(098) 89-04-494</a>
             <p class="phone__text">Пн-Пт 8:00 Сб-Нд 9-18</p>
           </div>
           <div class="header__socials socials">
-            <a class="socials-link" href="https://www.instagram.com/">
+            <a class="socials-link" href="https://www.instagram.com/" target="_blank">
               <svg fill="#000000" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" width="35px" height="35px">
                 <path
                   d="M 16 3 C 8.8324839 3 3 8.8324839 3 16 L 3 34 C 3 41.167516 8.8324839 47 16 47 L 34 47 C 41.167516 47 47 41.167516 47 34 L 47 16 C 47 8.8324839 41.167516 3 34 3 L 16 3 z M 16 5 L 34 5 C 40.086484 5 45 9.9135161 45 16 L 45 34 C 45 40.086484 40.086484 45 34 45 L 16 45 C 9.9135161 45 5 40.086484 5 34 L 5 16 C 5 9.9135161 9.9135161 5 16 5 z M 37 11 A 2 2 0 0 0 35 13 A 2 2 0 0 0 37 15 A 2 2 0 0 0 39 13 A 2 2 0 0 0 37 11 z M 25 14 C 18.936712 14 14 18.936712 14 25 C 14 31.063288 18.936712 36 25 36 C 31.063288 36 36 31.063288 36 25 C 36 18.936712 31.063288 14 25 14 z M 25 16 C 29.982407 16 34 20.017593 34 25 C 34 29.982407 29.982407 34 25 34 C 20.017593 34 16 29.982407 16 25 C 16 20.017593 20.017593 16 25 16 z" />
@@ -96,7 +96,7 @@
     </div>
   </header>
 
-  <!-- <main class="main">
+  <main class="main">
     <section class="services" id="services">
       <div class="container">
         <h2 class="title">ПОСЛУГИ</h2>
@@ -119,6 +119,7 @@
         </div>
       </div>
     </section>
+   
     <section class="photos-slider" id="sliderphotos">
       <div class="container">
         <h2 class="title">ФОТО РОБІТ</h2>
@@ -170,7 +171,8 @@
           </a>
         </div>
       </div>
-    </section>
+  </section>
+      <!--
     <section class="about" id="about">
       <div class="container">
         <h2 class="about__title title">ПРО НАС</h2>
@@ -290,16 +292,16 @@
           </form>
         </div>
       </div>
-    </section>
+    </section> -->
   </main>
 
   <footer class="footer">
     <div class="container">
       <div class="footer__inner">
-        <a class="logo" href="#">
+        <a class="logo logo-footer" href="#">
           <img src="images/logo.png" alt="logo">
         </a>
-        <div class="socials">
+        <div class="socials socials-footer">
           <a class="socials-link" href="#">
             <svg fill="#000000" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" width="35px" height="35px">
               <path
@@ -319,13 +321,13 @@
             </svg>
           </a>
         </div>
-        <div class="phone__box">
+        <div class="phone__box phone__box-footer">
           <a class="phone" href="tel:0988904494">(098) 89-04-494</a>
           <p class="phone__text">Пн-Пт 8:00 Сб-Нд 9-18</p>
         </div>
       </div>
     </div>
-  </footer> -->
+  </footer> 
 
 
   <script src="js/main.min.js"></script>
