added about, advantages, contacts adaptive

--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-  <header class="header">      
+  <header class="header">
     <div class="container">
       <div class="header__inner">
         <div class="header__top">
@@ -119,7 +119,6 @@
         </div>
       </div>
     </section>
-   
     <section class="photos-slider" id="sliderphotos">
       <div class="container">
         <h2 class="title">ФОТО РОБІТ</h2>
@@ -171,8 +170,7 @@
           </a>
         </div>
       </div>
-  </section>
-      <!--
+    </section>
     <section class="about" id="about">
       <div class="container">
         <h2 class="about__title title">ПРО НАС</h2>
@@ -209,7 +207,8 @@
             </div>
           </div>
           <div class="about__video-popup">
-            <a class="about__video-link" data-fancybox href="https://www.youtube.com/watch?v=xuGy_2jZz4E">
+            <a class="about__video-link" data-fancybox
+              href="https://www.youtube.com/watch?v=WzQBAc8i73E&list=RDPaDWKhzJBwY&index=12">
               <img class="about__video-img" src="images/play-icon.svg" alt="play icon">
             </a>
           </div>
@@ -259,19 +258,29 @@
         <h2 class="title">ЗАЛИШИТИ ЗАЯВКУ</h2>
         <div class="contacts__inner">
           <div class="contacts__info">
-            <div class="contacts__info-box">
-              <p class="contacts__info-text">
-                Залишились питання? <br>
-                Ви можете зв’язатися з нами:
-              </p>
-              <p class="contacts__info-text">
-                WhatsApp, Viber, Telegram <br>
-                +38 098 89-04-494
-              </p>
-              <p class="contacts__info-text">
-                м. Зборів,вулиця Богдана <br>
-                Хмельницького 22
-              </p>
+            <div class="contacts__info-wrapper">
+              <div class="contacts__info-box">
+                <p class="contacts__info-text">
+                  Залишились питання?
+                </p>
+                <p class="contacts__info-text">
+                  Ви можете зв’язатися з нами:
+                </p>
+              </div>
+              <div class="contacts__info-box">
+                <p class="contacts__info-text">
+                  WhatsApp, Viber, Telegram
+                  <p class="contacts__info-text">
+                    +38 098 89-04-494
+                  </p>
+                </p>
+              </div>
+              <div class="contacts__info-box">
+                <p class="contacts__info-text">
+                  м. Зборів,вулиця Богдана
+                  Хмельницького 22
+                </p>
+              </div>
             </div>
           </div>
           <form class="contacts__form" id="form" name="form" action="#">
@@ -292,7 +301,7 @@
           </form>
         </div>
       </div>
-    </section> -->
+    </section>
   </main>
 
   <footer class="footer">
@@ -327,8 +336,7 @@
         </div>
       </div>
     </div>
-  </footer> 
-
+  </footer>
 
   <script src="js/main.min.js"></script>
 </body>
