--- a/app/index.html
+++ b/app/index.html
@@ -308,7 +308,7 @@
     <div class="container">
       <div class="footer__inner">
         <a class="logo logo-footer" href="#">
-          <img src="images/logo.png" alt="logo">
+          <img src="images/logoo.png" alt="logo">
         </a>
         <div class="socials socials-footer">
           <a class="socials-link" href="#">
