--- a/app/photo-of-work4.html
+++ b/app/photo-of-work4.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="uk">
 
-<head>
+<head id="photos-item">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Зборів СТО</title>
-  <!-- telegram -->
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-  <!--=============== -->
+  <!-- favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="images/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="images/favicons/favicon-16x16.png">
@@ -16,6 +14,10 @@
   <link rel="mask-icon" href="images/favicons/safari-pinned-tab.svg" color="#1f89a7">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
+
+  <!-- telegram -->
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+  <!--=============== -->
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -23,9 +25,9 @@
 
   <header class="header">
     <div class="container">
-      <div class="header__inner">
+      <div class="header__inner header__inner-photos">
         <div class="header__top">
-          <a class="logo" href="#">
+          <a class="logo" href="index.html">
             <img src="images/logo.png" alt="logo">
           </a>
           <nav class="menu">
@@ -34,16 +36,10 @@
             </button>
             <ul class="menu__list">
               <li class="menu__list-item">
-                <a class="menu__list-link" href="#services">Послуги</a>
+                <a class="menu__list-link" href="#photos-item">Заміна фільтрів</a>
               </li>
               <li class="menu__list-item">
                 <a class="menu__list-link" href="#sliderphotos">Фото робіт</a>
-              </li>
-              <li class="menu__list-item">
-                <a class="menu__list-link" href="#about">Про нас</a>
-              </li>
-              <li class="menu__list-item">
-                <a class="menu__list-link" href="#advantages">Переваги</a>
               </li>
               <li class="menu__list-item">
                 <a class="menu__list-link" href="#contacts">Контакти</a>
@@ -75,60 +71,46 @@
             </a>
           </div>
         </div>
-        <div class="header__bottom">
-          <div class="header__bottom-content">
-            <h1 class="header__bottom-descr">
-              Автосервіс повного технічного обслуговування.
-              Центр кузовного ремонту та професійного відновлення
-            </h1>
-            <div class="button__popup">
-              <a id="popup-open" class="button__link" href="#">Залишити заявку</a>
-            </div>
-            <div class="popup" id="popup">
-              <div class="popup__container">
-                <div class="popup__body" id="popup__body">
-                  <h5 class="popup__body-title">Залишити заявку</h5>
-                  <form class="popup__form" id="popup_form" name="form" action="telegram.php" method="POST">
-                    <input id="formName" class="popup__body-input _req" type="text" placeholder="Як вас звати?*"
-                      name="user_name">
-                    <input id="formPhone" class="popup__body-input _phone _req" type="text"
-                      placeholder="Номер телефону*" name="user_phone">
-                    <button class="button popup__send-button" type="submit">Надіслати</button>
-                  </form>
-                  <div class="popup__close" id="popup-close">&#10006</div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <img class="header__bottom-img" src="images/header-img.png" alt="image">
-        </div>
       </div>
     </div>
   </header>
 
   <main class="main">
-    <section class="services" id="services">
+
+    <section class="photos-item">
       <div class="container">
-        <h2 class="title">ПОСЛУГИ</h2>
-        <div class="services__inner">
-          <div class="services__items">
-            <p class="services__item services__item1">Заміна мастил</p>
-            <p class="services__item services__item2">Заправка кондиціонера</p>
-            <p class="services__item services__item3">Підбір запчастин</p>
-            <p class="services__item services__item4">Ремонт двигуна</p>
-            <p class="services__item services__item5">Рихтувальні послуги</p>
-            <p class="services__item services__item6">Зварювальні послуги</p>
-            <p class="services__item services__item7">Слюсарні роботи</p>
-            <p class="services__item services__item8">Повна покраска</p>
-            <p class="services__item services__item9">Локальна покраска</p>
-            <p class="services__item services__item10">Поліровка деталей</p>
-            <p class="services__item services__item11">Рихтовка алюмінію</p>
-            <p class="services__item services__item12">Заміна фільтрів</p>
+        <h2 class="title">ЗАМІНА ФІЛЬТРІВ</h2>
+        <div class="photos-item__inner">
+          <div class="photos-item__text-box">
+            <p class="photos-item__text">
+              Фільтр хоч і є витратним елементом, його заміна повинна проводитися при кожній зміні нового масла. Його
+              роль - фільтрація масла від частинок бруду і інших елементів сміття, оскільки їх вплив негативно
+              позначається на функціонуванні двигуна.
+            </p>
+            <p class="photos-item__text">
+              Нерідко буває, що потрібно його позачергова заміна - це фахівці
+              СТО «Магнат» зможуть визначити по зміненим параметрам роботи мотора. Онлайн запис дозволить швидко
+              провести його заміну в умовах автосервісу.
+            </p>
           </div>
-          <a class="button-details button" href="#contacts">Детальніше</a>
+          <div class="photos-item__slider">
+            <div class="photos-item__slider-box">
+              <img class="photos-item__slider-img" src="images/photos-item/photo-1.jpg" alt="photo of work">
+            </div>
+            <div class="photos-item__slider-box">
+              <img class="photos-item__slider-img" src="images/photos-item/photo-2.jpg" alt="photo of work">
+            </div>
+            <div class="photos-item__slider-box">
+              <img class="photos-item__slider-img" src="images/photos-item/photo-3.jpg" alt="photo of work">
+            </div>
+            <div class="photos-item__slider-box">
+              <img class="photos-item__slider-img" src="images/photos-item/photo-4.jpg" alt="photo of work">
+            </div>
+          </div>
         </div>
       </div>
     </section>
+
     <section class="photos-slider" id="sliderphotos">
       <div class="container">
         <h2 class="title">ФОТО РОБІТ</h2>
@@ -143,7 +125,7 @@
             </div>
           </a>
           <a class="photos-slider__item" href="photo-of-work2.html">
-            <img class="photos-slider__img" src="images/slider/photo.jpg" alt="image">
+            <img class="photos-slider__img" src="images/slider/photo-2.jpg" alt="image">
             <div class="photos-slider__box">
               <h4 class="photos-slider__title">Заміна коліс</h4>
               <p class="photos-slider__text">
@@ -152,7 +134,7 @@
             </div>
           </a>
           <a class="photos-slider__item" href="photo-of-work3.html">
-            <img class="photos-slider__img" src="images/slider/photo-1.jpg" alt="image">
+            <img class="photos-slider__img" src="images/slider/photo-3.jpg" alt="image">
             <div class="photos-slider__box">
               <h4 class="photos-slider__title">Зварювальні послуги</h4>
               <p class="photos-slider__text">
@@ -161,7 +143,7 @@
             </div>
           </a>
           <a class="photos-slider__item" href="photo-of-work4.html">
-            <img class="photos-slider__img" src="images/slider/photo.jpg" alt="image">
+            <img class="photos-slider__img" src="images/slider/photo-4.jpg" alt="image">
             <div class="photos-slider__box">
               <h4 class="photos-slider__title">Заміна фільтрів</h4>
               <p class="photos-slider__text">
@@ -169,87 +151,6 @@
               </p>
             </div>
           </a>
-        </div>
-      </div>
-    </section>
-    <section class="about" id="about">
-      <div class="container">
-        <h2 class="about__title title">ПРО НАС</h2>
-        <div class="about__inner">
-          <div class="about__content">
-            <div class="about__text-box">
-              <p class="about__text">
-                Зборів автосервіс заснований двома братами. Ми робимо свою роботу на совість. Від дрібного ремонту до
-                серйозних
-                відновлювальних робіт.
-              </p>
-              <p class="about__text">
-                Ми не велике СТО, в якому трудиться 6 осіб. Гарантуємо, що звертаючись до нашого автосервісу, ваше авто
-                буде справне, а
-                ви у відмінному настрої.
-                Ми не велике СТО, в якому трудиться 6 осіб. Гарантуємо, що звертаючись до нашого автосервісу, ваше авто
-                буде справне, а
-                ви у відмінному настрої.
-              </p>
-            </div>
-            <div class="about__numbers">
-              <h5 class="about__num">
-                150
-                <span>задоволених клієнтів</span>
-              </h5>
-              <h5 class="about__num">
-                500
-                <span>виконано робіт</span>
-              </h5>
-              <h5 class="about__num">
-                320
-                <span>відгуків</span>
-              </h5>
-            </div>
-          </div>
-          <div class="about__video-popup">
-            <a class="about__video-link" data-fancybox href="https://www.youtube.com/watch?v=4AASokS57Oc">
-              <img class="about__video-img" src="images/play-icon.svg" alt="play icon">
-            </a>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="advantages" id="advantages">
-      <div class="container">
-        <h2 class="title">ПЕРЕВАГИ</h2>
-        <div class="advantages__inner">
-          <div class="advantages__items">
-            <div class="advantages__item">
-              <img class="advantages__img" src="images/icons/quality.svg" alt="icon">
-              <h4 class="advantages__title">Якісне обслуговування</h4>
-              <p class="advantages__text">
-                На першому місці завжди повинна бути якість, ми дбаємо щоб наші клієнти були задоволені!
-              </p>
-            </div>
-            <div class="advantages__item">
-              <img class="advantages__img" src="images/icons/experience.svg" alt="icon">
-              <h4 class="advantages__title">Багторічний досвід</h4>
-              <p class="advantages__text">
-                На першому місці завжди повинна бути якість, ми дбаємо щоб наші клієнти були задоволені!
-              </p>
-            </div>
-            <div class="advantages__item">
-              <img class="advantages__img" src="images/icons/parts.svg" alt="icon">
-              <h4 class="advantages__title">Підбір запчастин</h4>
-              <p class="advantages__text">
-                Наша команда спеціалістів швидко допоможе вам підібрати потрібні запчастини та діставити їх якнайшвидше.
-              </p>
-            </div>
-            <div class="advantages__item advantages__item-speed">
-              <img class="advantages__img advantages__img-speed" src="images/icons/speed.svg" alt="icon">
-              <h4 class="advantages__title">Швидкість роботи</h4>
-              <p class="advantages__text">
-                В автосервісі ART Customs працують майстри, які допоможуть вам вирішити проблему з автомобілем в
-                найблищий час.
-              </p>
-            </div>
-          </div>
         </div>
       </div>
     </section>
@@ -307,7 +208,7 @@
   <footer class="footer">
     <div class="container">
       <div class="footer__inner">
-        <a class="logo logo-footer" href="#">
+        <a class="logo logo-footer" href="index.html">
           <img src="images/logo.png" alt="logo">
         </a>
         <div class="socials socials-footer">
