added page покраса, fix header

--- a/app/index.html
+++ b/app/index.html
@@ -8,25 +8,27 @@
   <title>Зборів СТО</title>
   <!-- telegram -->
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-  <!--=============== -->
+  <!-- favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="images/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="images/favicons/favicon-16x16.png">
   <link rel="manifest" href="images/favicons/site.webmanifest">
-  <link rel="mask-icon" href="images/favicons/safari-pinned-tab.svg" color="#1f89a7">
+  <link rel="mask-icon" href="images/favicons/safari-pinned-tab.svg" color="#4ebd69">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
+  <!-- favicon -->
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
 
+  <!-- header -->
   <header class="header">
     <div class="header__inner">
       <div class="header__top">
         <div class="container">
           <div class="header__top-inner">
-            <a class="logo" href="#">
+            <a class="logo" href="index.html">
               <img src="images/logo.png" alt="logo">
             </a>
             <nav class="menu">
@@ -111,7 +113,9 @@
       </div>
     </div>
   </header>
+  <!-- header -->
 
+  <!-- main -->
   <main class="main">
     <section class="services" id="services">
       <div class="container">
@@ -172,6 +176,15 @@
               <h4 class="photos-slider__title">Заміна фільтрів</h4>
               <p class="photos-slider__text">
                 Дуже важливо знати, що злив автомобільного мастила необхідно проводити тільки з розігрітого двигуна.
+              </p>
+            </div>
+          </a>
+          <a class="photos-slider__item" href="photo-of-work5.html">
+            <img class="photos-slider__img" src="images/slider/photo-1.jpg" alt="image">
+            <div class="photos-slider__box">
+              <h4 class="photos-slider__title">Покраска</h4>
+              <p class="photos-slider__text">
+                Фарбування автомобіля складається з кількох важливих складових, і неналежне виконання кожної
               </p>
             </div>
           </a>
@@ -287,7 +300,6 @@
                     href="https://www.google.com/maps/place/%D0%90%D0%B2%D1%82%D0%BE%D1%81%D0%B5%D1%80%D0%B2%D1%96%D1%81+ZTS/@49.6727074,25.1280952,17.08z/data=!4m8!1m2!2m1!1z0LfQsdC-0YDRltCyINCw0LLRgtC-0YHQtdGA0LLRltGB!3m4!1s0x47301156247e4f61:0x53acb0ee68f4f0e0!8m2!3d49.674256!4d25.1290275">м.
                     Зборів,вулиця Богдана
                     Хмельницького 22</a>
-                  
                 </p>
               </div>
             </div>
@@ -312,12 +324,14 @@
       </div>
     </section>
   </main>
+  <!-- main -->
 
+  <!-- footer -->
   <footer class="footer">
     <div class="footer__wrapper">
       <div class="container">
         <div class="footer__inner">
-          <a class="logo logo-footer" href="#">
+          <a class="logo logo-footer" href="index.html">
             <img src="images/logo.png" alt="logo">
           </a>
           <div class="socials socials-footer">
@@ -348,6 +362,7 @@
       </div>
     </div>
   </footer>
+
 
   <!-- telegram -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
